# pco-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/plans/: 2026-04-03-pco-mcp-implementation.md  2026-04-03-v1-fixes.md  2026-04-13-calendar.md  2026-04-13-checkins.md  2026-04-13-people-expansion.md  2026-04-13-services-expansion.md  2026-04-17-pco-data-completeness.md
docs/reviews/: 2026-04-03-v1-review-findings.md  2026-04-06-v2-audit-findings.md
docs/specs/: 2026-04-03-pco-mcp-design.md  2026-04-13-calendar-design.md  2026-04-13-checkins-design.md  2026-04-13-people-expansion-design.md  2026-04-13-services-expansion-design.md  2026-04-17-pco-data-completeness-design.md
src/pco_mcp/: auth.py  config.py  crypto.py  db.py  errors.py  main.py  middleware.py  models.py
src/pco_mcp/oauth/: pco_client.py  provider.py
src/pco_mcp/pco/: _envelope.py  calendar.py  checkins.py  client.py  people.py  services.py
tests/: conftest.py  test_config.py  test_context.py  test_cors_and_public_client.py  test_coverage_boost.py  test_coverage_boost2.py  test_crypto.py  test_db.py  test_envelope.py  test_envelope_helpers.py  test_errors.py  test_main.py  test_middleware.py  test_oauth_endpoints.py  test_oauth_provider.py  test_oauth_provider_extended.py  test_pco_calendar.py  test_pco_checkins.py  test_pco_client.py  test_pco_client_write.py  test_pco_oauth_client.py  test_pco_people.py  test_pco_people_write.py  test_pco_services.py  test_pco_services_write.py  test_tools_calendar_body.py  test_tools_checkins_body.py  test_tools_people.py  test_tools_people_body.py  test_tools_services.py  test_tools_services_body.py  test_web_routes.py
(+73 files in other folders)
